update nginx-php dockerfile

--- a/nginx-php7/supervisord.conf
+++ b/nginx-php7/supervisord.conf
@@ -21,3 +21,6 @@ command=/usr/local/bin/nginx -g  "daemon off;"
 numprocs=1
 autostart=true
 autorestart=true
+
+[include]
+files = /etc/supervisor.d/*.ini
